welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:18: error: unclosed string literal
		}else if (litMessage()=="B'){
                                        ^BDRBuggle:21: error: Unmatched closing brace '}' ignored here
		}else if (litMessage()=="C"){
                ^BDRBuggle:21: error: illegal start of statement
		}else if (litMessage()=="C"){
                 ^BDRBuggle:34: error: Unmatched closing brace '}' ignored here
									}
                                                                        ^BDRBuggle:40: error: eof expected but '}' found.
			}
                        ^